k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: pal-tracker
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
   - host:  54.215.213.181.nip.io
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: pal-tracker
          servicePort: 8080
